--- a/single-project.html
+++ b/single-project.html
@@ -17,7 +17,7 @@
 					<img src="images/1.jpg" alt="" />
 				</div>
 				<div class="col-md-3 project-details">
-					<h5>Project Details</h5>
+					<h5>活动概览</h5>
 					<ul class="details-list">
 						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> Project category</li>
 						<li><i class="fa fa-user"></i> <strong class="strong">Designer: </strong> MH Rafi</li>
@@ -27,10 +27,8 @@
 					</ul>
 				</div>
 				<div class="col-md-4 project-info">
-					<h5>Project Info</h5>
-					<p>Without. Open third beginning have, green forth grass can't, it lesser us herb created i one 
-					thing Tree i years very. Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.
-					Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.</p>
+					<h5>活动介绍</h5>
+					<p>发挥你们的扯犊子能力开始编瞎话吧，多编点，少了不好看。</p>
 				</div>
 			</div>
 		</div>
