--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 					<h3>通过视频认识我们</h3>
 				</div>
 				<div class="col-md-10 col-md-offset-1 video-content">
-					<iframe src="http://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="600" height="360"> </iframe>
+					<iframe src="https://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="600" height="360"> </iframe>
 					<!-- <iframe src="http://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" width="400" height="240"></iframe> -->
 				</div>
 			</div>
