--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	<link rel="stylesheet" href="css/fancy-buttons.css" />
 	
 	<!--=== Google Fonts ===-->
-	<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,700,400' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Raleway:600,400,300' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300,700,400' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:600,400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 	<!--=== Other CSS files ===-->
 	<link rel="stylesheet" href="css/animate.css" />
 	<link rel="stylesheet" href="css/jquery.vegas.css" />
@@ -436,7 +437,7 @@
 					<h3>通过视频认识我们</h3>
 				</div>
 				<div class="col-md-10 col-md-offset-1 video-content">
-					<iframe src="http://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="600" height="360"> </iframe>
+					<iframe src="https://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="500" height="360"> </iframe>
 					<!-- <iframe src="http://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" width="400" height="240"></iframe> -->
 				</div>
 			</div>
