--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-	<title>黑色代码魔术社 Ver=2019.7</title>
+	<title>黑色代码魔术社官网 Ver 2019.7</title>
 	
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,9 +38,9 @@
 </head>
 <body>
 	<!--=== Preloader section starts ===-->
-	<section id="preloader">
+	<!-- <section id="preloader">
 		<div class="loading-circle fa-spin"></div>
-	</section>
+	</section> -->
 	<!--=== Preloader section Ends ===-->
 	
 	<!--=== Header section Starts ===-->
@@ -436,7 +436,7 @@
 					<h3>通过视频认识我们</h3>
 				</div>
 				<div class="col-md-10 col-md-offset-1 video-content">
-					<iframe src="https://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="500" height="360"> </iframe>
+					<iframe src="https://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="450" height="360"> </iframe>
 					<!-- <iframe src="http://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" width="400" height="240"></iframe> -->
 				</div>
 			</div>
@@ -639,7 +639,7 @@
 	</section>
 	<!--=== Testimonials section Ends ===-->
 	
-	<div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >企业网站模板</a></div>
+	<div class="copyrights">Collect from <a href="https://jerry-fage.github.io/" >黑色代码</a></div>
 	<!--=== Pricing section Starts ===-->
 	<section id="section-pricing" class="pricing-wrap">
 		<div class="container pricing">
