更新活动模块文案（待改）
更新活动模块文案（待改）

--- a/single-project-2.html
+++ b/single-project-2.html
@@ -14,23 +14,25 @@
 					<h4>Project Title 2</h4>
 				</div>
 				<div class="col-md-5 project-photo">
-					<img src="images/8.jpg" alt="" />
+					<iframe src="https://player.bilibili.com/player.html?aid=42259968&cid=74178288&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="400" height="240"> </iframe>
 				</div>
 				<div class="col-md-3 project-details">
-					<h5>Project Details 2</h5>
+					<h5>黑色代码魔术社2016年宣传视频</h5>
 					<ul class="details-list">
-						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> Project category</li>
-						<li><i class="fa fa-user"></i> <strong class="strong">Designer: </strong> MH Rafi</li>
-						<li><i class="fa fa-calendar"></i> <strong class="strong">Date: </strong> 27 Dec 2014</li>
-						<li><i class="fa fa-group"></i> <strong class="strong">Client: </strong> Jhone Doe</li>
-						<li><i class="fa fa-link"></i> <strong class="strong">Project url: </strong> <a href="#"><strong>themegret</strong></a></li>
+						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> 宣传片</li>
+						<li><i class="fa fa-user"></i> <strong class="strong">Designer: </strong> Jerry_FaGe</li>
+						<li><i class="fa fa-calendar"></i> <strong class="strong">Date: </strong> 31 Jan 2019</li>
+						<li><i class="fa fa-group"></i> <strong class="strong">Client: </strong> 河北工程大学黑色代码魔术社2016级成员</li>
+						<li><i class="fa fa-link"></i> <strong class="strong">Project url: </strong> <a href="https://www.bilibili.com/video/av42259968"><strong>https://www.bilibili.com/video/av42259968</strong></a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 project-info">
-					<h5>Project Info 2</h5>
-					<p>Without. Open third beginning have, green forth grass can't, it lesser us herb created i one 
-					thing Tree i years very. Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.
-					Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.</p>
+					<h5>Project Info</h5>
+					<p>河北工程大学黑色代码魔术社2016年招新视频</br>
+						这个视频不是我做的，当时因为看过后感觉很平常后来就剪了个鬼畜版的，以后可能会发出来用作对比</br>
+
+						BGM：Hey Let's Go - X-Ray Dog；IF YOU - BIGBANG</br>
+						CAST：河北工程大学黑色代码魔术社2016级成员</p>
 				</div>
 			</div>
 		</div>
