--- a/single-project-3.html
+++ b/single-project-3.html
@@ -11,26 +11,28 @@
 		<div class="portfolio-project">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 center section-title">
-					<h4>Project Title 2</h4>
+					<h4>我的魔术社不可能这么鬼畜</h4>
 				</div>
 				<div class="col-md-5 project-photo">
-					<iframe src="https://player.bilibili.com/player.html?aid=59951419&cid=104412858&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="400" height="240"> </iframe>
+					<iframe src="https://player.bilibili.com/player.html?aid=42366445&cid=74349548&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="400" height="240"> </iframe>
 				</div>
 				<div class="col-md-3 project-details">
-					<h5>Project Details 2</h5>
+					<h5>我的魔术社不可能这么鬼畜</h5>
 					<ul class="details-list">
-						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> Project category</li>
-						<li><i class="fa fa-user"></i> <strong class="strong">Designer: </strong> MH Rafi</li>
-						<li><i class="fa fa-calendar"></i> <strong class="strong">Date: </strong> 27 Dec 2014</li>
-						<li><i class="fa fa-group"></i> <strong class="strong">Client: </strong> Jhone Doe</li>
-						<li><i class="fa fa-link"></i> <strong class="strong">Project url: </strong> <a href="#"><strong>themegret</strong></a></li>
+						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> 鬼畜版宣传片</li>
+						<li><i class="fa fa-user"></i> <strong class="strong">Designer: </strong> Jerry_FaGe</li>
+						<li><i class="fa fa-calendar"></i> <strong class="strong">Date: </strong> 01 Feb 2019</li>
+						<li><i class="fa fa-group"></i> <strong class="strong">Client: </strong> 河北工程大学黑色代码魔术社2016级成员</li>
+						<li><i class="fa fa-link"></i> <strong class="strong">Project url: </strong> <a href="https://www.bilibili.com/video/av42366445"><strong>https://www.bilibili.com/video/av42366445</strong></a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 project-info">
-					<h5>Project Info 2</h5>
-					<p>Without. Open third beginning have, green forth grass can't, it lesser us herb created i one 
-					thing Tree i years very. Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.
-					Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.</p>
+					<h5>Project Info</h5>
+					<p><a href="https://www.bilibili.com/video/av42259968"><strong>av42259968</strong></a>的鬼畜版剪辑，请配合食用，第一次这么剪片子可能会有许多瑕疵。</br>
+					视频本身也就是个2016年的备份，看个乐呵就好</br>
+
+					BGM：Tunak Tunak Tun (Remix) - TODIEFOR/Daler Mehndi；Cry On My Shoulder - Deutschland sucht den Superstar</br>
+					CAST：河北工程大学黑色代码魔术社2016级成员</p>
 				</div>
 			</div>
 		</div>
