--- a/single-project.html
+++ b/single-project.html
@@ -14,21 +14,24 @@
 					<h4>Project Title</h4>
 				</div>
 				<div class="col-md-5 project-photo">
-					<img src="images/1.jpg" alt="" />
+					<iframe src="https://player.bilibili.com/player.html?aid=35931820&cid=63063935&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="400" height="240"> </iframe>
 				</div>
 				<div class="col-md-3 project-details">
 					<h5>活动概览</h5>
 					<ul class="details-list">
-						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> Project category</li>
-						<li><i class="fa fa-user"></i> <strong class="strong">Designer: </strong> MH Rafi</li>
-						<li><i class="fa fa-calendar"></i> <strong class="strong">Date: </strong> 27 Dec 2014</li>
-						<li><i class="fa fa-group"></i> <strong class="strong">Client: </strong> Jhone Doe</li>
-						<li><i class="fa fa-link"></i> <strong class="strong">Project url: </strong> <a href="#"><strong>themegret</strong></a></li>
+						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> 脑洞</li>
+						<li><i class="fa fa-user"></i> <strong class="strong">Designer: </strong> Jerry_FaGe</li>
+						<li><i class="fa fa-calendar"></i> <strong class="strong">Date: </strong> 14 Nov 2018</li>
+						<li><i class="fa fa-group"></i> <strong class="strong">Client: </strong> 杨洋</li>
+						<li><i class="fa fa-link"></i> <strong class="strong">Project url: </strong> <a href="https://www.bilibili.com/video/av35931820"><strong>https://www.bilibili.com/video/av35931820</strong></a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 project-info">
 					<h5>活动介绍</h5>
-					<p>发挥你们的扯犊子能力开始编瞎话吧，多编点，少了不好看。</p>
+					<p>游戏：OSU！</br>
+					BGM：μ's-No brand girls</br>
+					昨天玩OSU！的时候开的一个脑洞，做出来发现毫无违和感唉</br>
+					PS：虽然有好多曲子更适合这个这个画面，不过我还是要说：μ'sic forever !!!</p>
 				</div>
 			</div>
 		</div>
