--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 								<img src="images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
 								<h4 class="feature-title color-scheme">纸牌</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut.
+									纸牌魔术，是以纸牌为基本道具，通过花色、点数及位置的变化来实现魔术效果的魔术。
 								</p>
 								
 									<a href="#" class="fancy-button button-line btn-col small vertical">
@@ -145,7 +145,7 @@
 								<img src="images/2.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
 								<h4 class="feature-title color-scheme">近景（全是道具）</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+									与观众面对面，用生活中常见的物品欺骗观众的眼睛，往往带来的震撼极大。
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
 									Details
@@ -161,7 +161,7 @@
 								<img src="images/3.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
 								<h4 class="feature-title color-scheme">舞台（可以挣钱）</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+									商业演出基本流程，一场999，加群就送。
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
 									Details
@@ -177,7 +177,7 @@
 								<img src="images/4.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
 								<h4 class="feature-title color-scheme">大型幻术（急需女伴）</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+									变出小姐姐，然后宝剑插小姐姐，砍小姐姐的头，把小姐姐切两半儿（大雾）
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
 									Details
@@ -193,7 +193,7 @@
 								<img src="images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
 								<h4 class="feature-title color-scheme">花切（没几个人会）</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+									像赌神一样咔咔切牌，老好看了，小姐姐看了都会嘤嘤嘤。
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
 									Details
@@ -209,7 +209,7 @@
 								<img src="images/6.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
 								<h4 class="feature-title color-scheme">扯犊子</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+									黑色代码主营业务，扯犊子编瞎话技术一流，欢迎切磋。
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
 									Details
@@ -225,7 +225,7 @@
 								<img src="images/7.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
 								<h4 class="feature-title color-scheme">喝酒（好像失传了）</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+									黑色代码喝酒社名不虚传（某个酒神退位了之后就失传了）
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
 									Details
@@ -241,7 +241,7 @@
 								<img src="images/8.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
 								<h4 class="feature-title color-scheme">还有啥来着</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+									说吧，你想加什么社团，我们就是什么社团。
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
 									Details
@@ -449,7 +449,7 @@
 		<div class="container screenshots animated" data-animation="fadeInUp" data-animation-delay="1000">
 			<div class="row porfolio-container">
 				<div class="col-md-10 col-md-offset-1 center section-title">
-					<h3>我们都有啥活动</h3>
+					<h3>由于这里没人交文案所以变成了发哥的个人秀</h3>
 				</div>
 				<!-- Single screenshot starts -->
 				<div class="col-md-4 col-sm-4 col-xs-6">
