--- a/index.html
+++ b/index.html
@@ -593,13 +593,11 @@
 						<!-- Single Testimonial Starts -->
 						<div class="testimonial">
 							<p class="comment">
-								Dolor sit amet, consectetur adipiscing elit. Nullam eu sem ante. Nullam quis risus eu 
-								purus commodo dignissim. Donec iaculis ac ex vel posuere. Sed posuere, elit vitae mattis condimentum, 
-								quam urna fringilla magna
+								我是顾嘉慧，黑色代码魔术社副社长。小时候接触到魔术，觉得很神奇。2017年加入黑色代码魔术社正式开始学习。比较擅长舞台魔术，也正在提高自己的近景、手法。希望未来可以和大家一起学习，演出，研究魔术。
 							</p>
 							
 							<h5 class="happy-client">顾嘉慧</h5>
-							<span class="client-info">Developer at TTF Corp.</span>
+							<span class="client-info">黑色代码魔术社副社长</span>
 						</div>
 						<!-- Single Testimonial Ends -->
 						
