--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 						
 						<div class="home-buttons">
 							<a href="https://jq.qq.com/?_wv=1027&k=5uviCfg" class="fancy-button button-line button-white vertical">
-								现在加入
+								官方迎新群
 								<span class="icon">
 									<i class="fa fa-gear"></i>
 								</span>
 							</a>
-							<a href="https://jq.qq.com/?_wv=1027&k=5uviCfg" class="fancy-button button-line button-white zoom">
-								马上加入
+							<a href="https://qm.qq.com/cgi-bin/qm/qr?k=WdTfPe4ZOsVQWqKtQ0zPTnXvYb4SvJ_Y" class="fancy-button button-line button-white zoom">
+								官方QQ号
 								<span class="icon">
 									<i class="fa fa-leaf"></i>
 								</span>
@@ -371,12 +371,13 @@
 							<p class="step-description">魔术是什么？魔术是错觉。但是错觉是为了给人带来快乐，娱乐和灵感。这是关于信仰、信念、信任。有人说魔术是骗局；我说魔术是创造，是想象力。它靠技巧来创造快乐，编织梦想。魔术社，一个神奇的地方。在这里我们会教你用技巧去制造错觉，创造快乐同时，你也可以体验到社团的温暖和魅力，来和我们一起创造奇迹吧！</p>
 							<ul class="sub-steps"> <!-- Sub steps here -->
 								<li>
-									<span class="icon fa fa-comments color-scheme"></span>
-									<span class="sub-text">19新生群号:693134755</span>
+									<a href="https://qm.qq.com/cgi-bin/qm/qr?k=WdTfPe4ZOsVQWqKtQ0zPTnXvYb4SvJ_Y"><span class="icon fa fa-comments color-scheme"></span></a>
+									<span class="sub-text">QQ公众号:1794368235</span>	
 								</li>
 								<li>
-									<span class="icon fa fa-pencil-square-o color-scheme"></span>
-									<span class="sub-text">啥也憋说了加就完事了</span>
+									<a href="https://qm.qq.com/cgi-bin/qm/qr?k=WdTfPe4ZOsVQWqKtQ0zPTnXvYb4SvJ_Y">
+									<span class="icon fa fa-pencil-square-o color-scheme"></span></a>
+									<span class="sub-text">点击前面图标直接加好友</span>
 								</li>
 							</ul>
 					</div> <!-- End step-details -->
@@ -407,11 +408,15 @@
 							<p class="step-description">魔术能带来什么呢？在我看来，最浅显的理解就是快乐。每次的魔术表演，我最期待的就是在成功的那一刹那，观众脸上绽放的笑容，那种被感染了魔力的笑容，对魔术师而言是最大的幸福。练习的枯燥，思考的疲劳也都一扫而空。我期待能看到你这样的笑，我也期待你能让别人露出这样的笑。</p>	
 							<ul class="sub-steps"> <!-- Sub steps here -->
 								<li>
-									<span class="icon fa fa-comments color-scheme"></span>
+									<a href="https://jq.qq.com/?_wv=1027&k=5uviCfg">
+										<span class="icon fa fa-comments color-scheme"></span>
+									</a>
 									<span class="sub-text">19新生群号:693134755</span>
 								</li>
 								<li>
-									<span class="icon fa fa-pencil-square-o color-scheme"></span>
+									<a href="https://jq.qq.com/?_wv=1027&k=5uviCfg">
+										<span class="icon fa fa-pencil-square-o color-scheme"></span>
+									</a>
 									<span class="sub-text">啥也憋说了加就完事了</span>
 								</li>
 								
